--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/cache@v3
