--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -31,10 +31,15 @@ jobs:
       AFNI_TTATLAS_DATASET: /opt/afni/atlases
       AFNI_PLUGINPATH: /opt/afni/plugins
       ANTSPATH: /opt/ants
+      DEPS: ${{ matrix.deps }}
     strategy:
       max-parallel: 5
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        deps: ["requirements"]
+        include:
+          - python-version: "3.8"
+            deps: "min-requirements"
 
     steps:
     - uses: actions/cache@v3
@@ -109,10 +114,10 @@ jobs:
       run: |
         conda install fsl-fugue fsl-topup
     - uses: actions/checkout@v3
-    - name: Install minimal dependencies
+    - name: Install dependencies
       timeout-minutes: 5
       run: |
-        pip install -r min-requirements.txt
+        pip install -r $DEPS
         pip install .[tests]
 
 
