MNT: Update minimum nipype to match niworkflows minimum

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -31,7 +31,7 @@ jobs:
       AFNI_TTATLAS_DATASET: /opt/afni/atlases
       AFNI_PLUGINPATH: /opt/afni/plugins
       ANTSPATH: /opt/ants
-      DEPS: ${{ matrix.deps }}
+      DEPS: ${{ matrix.deps }}.txt
     strategy:
       max-parallel: 5
       matrix:
