--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,14 @@ docs_deploy: &docs
         name: Deploy docs to gh-pages branch
         command: gh-pages --dotfiles --message "doc(update) [skip ci]" --dist docs/_build/html
 
-version: 2
+version: 2.1
+orbs:
+  docker: circleci/docker@1.6.0
+
 jobs:
   cache_test_data:
     docker:
-      - image: python:3.7.4
+      - image: cimg/python:3.9.16
     working_directory: /tmp/data
     environment:
       - TEMPLATEFLOW_HOME: /tmp/templateflow
@@ -78,7 +81,7 @@ jobs:
           paths:
             - /tmp/cache/git-annex-standalone.tar.gz
             - /usr/local/bin
-            - /usr/local/lib/python3.7/site-packages
+            - /usr/local/lib/python3.9/site-packages
             - /usr/bin/git-annex
             - /usr/bin/git-annex-shell
             - /usr/lib/git-annex.linux
@@ -142,7 +145,7 @@ jobs:
 
   build_n_pytest:
     machine:
-      image: circleci/classic:201808-01
+      image: ubuntu-2204:2022.10.2
     working_directory: /tmp/tests
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -298,7 +301,7 @@ jobs:
 
   build_docs:
     docker:
-      - image: python:3.7.4
+      - image: cimg/python:3.9.16
     working_directory: /tmp/gh-pages
     environment:
       - FSLOUTPUTTYPE: NIFTI
@@ -360,7 +363,7 @@ jobs:
 
   deploy_docker:
     machine:
-      image: circleci/classic:201711-01
+      image: ubuntu-2204:2022.10.2
     working_directory: /tmp/src/
     steps:
       - restore_cache:
@@ -394,7 +397,7 @@ jobs:
 
   test_package:
     docker:
-      - image: circleci/python:3.7.4
+      - image: cimg/python:3.9.16
     working_directory: /tmp/src/sdcflows
     steps:
       - checkout
@@ -441,7 +444,7 @@ jobs:
 
   deploy_pypi:
     docker:
-      - image: circleci/python:3.7.4
+      - image: cimg/python:3.9.16
     working_directory: /tmp/src/sdcflows
     steps:
       - attach_workspace:
