--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,11 +190,11 @@ jobs:
           no_output_timeout: 60m
           command: |
             cd /tmp/src/sdcflows
-            pyenv local 3.7.0
-            python3 -m pip install "setuptools ~= 42.0" "setuptools_scm[toml] >= 3.4" "pip>=10.0.1"
+            python3 -m pip install --upgrade pip
+            python3 -m pip install --upgrade "setuptools_scm[toml]"
 
             # Get version, update files.
-            THISVERSION=$( python3 setup.py --version )
+            THISVERSION=$( python3 -m setuptools_scm )
             if [[ ${THISVERSION:0:1} == "0" ]] ; then
               echo "WARNING: latest git tag could not be found"
               echo "Please, make sure you fetch all tags from upstream with"
