--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,9 +406,8 @@ jobs:
           command: |
             python3 -m venv /tmp/buildenv
             source /tmp/buildenv/bin/activate
-            python3 -m pip install "setuptools ~= 42.0" wheel "setuptools_scm[toml] >= 3.4" \
-                "pip>=10.0.1" twine docutils
-            python setup.py sdist bdist_wheel
+            python3 -m pip install --upgrade pip build twine
+            python3 -m build
             twine check dist/sdcflows*
       - store_artifacts:
           path: /tmp/src/sdcflows/dist
@@ -420,8 +419,8 @@ jobs:
           command: |
             python3 -m venv /tmp/install_sdist
             source /tmp/install_sdist/bin/activate
-            python3 -m pip install "setuptools ~= 42.0" "pip>=10.0.1"
-            THISVERSION=$( python3 setup.py --version )
+            python3 -m pip install --upgrade pip setuptools_scm
+            THISVERSION=$( python3 -m setuptools_scm )
             THISVERSION=${CIRCLE_TAG:-$THISVERSION}
             python3 -m pip install dist/sdcflows*.tar.gz
             INSTALLED_VERSION=$(python3 -c 'import sdcflows as sdc; print(sdc.__version__, end="")')
@@ -433,8 +432,8 @@ jobs:
           command: |
             python3 -m venv /tmp/install_wheel
             source /tmp/install_wheel/bin/activate
-            python3 -m pip install "setuptools ~= 42.0" "pip>=10.0.1"
-            THISVERSION=$( python3 setup.py --version )
+            python3 -m pip install --upgrade pip setuptools_scm
+            THISVERSION=$( python3 -m setuptools_scm )
             THISVERSION=${CIRCLE_TAG:-$THISVERSION}
             python3 -m pip install dist/sdcflows*.whl
             INSTALLED_VERSION=$(python3 -c 'import sdcflows as sdc; print(sdc.__version__, end="")')
