DOC: Update docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,13 +45,12 @@ include_package_data = True
 
 [options.extras_require]
 doc =
-    sphinx >= 2.1.2, <3
+    sphinx ~= 4.2
     pydot >= 1.2.3
     pydotplus
-    sphinx_rtd_theme
-    sphinxcontrib-apidoc ~= 0.3.0
+    furo ~= 2021.10.09
+    sphinxcontrib-apidoc
     sphinxcontrib-napoleon
-    sphinxcontrib-versioning
 docs =
     %(doc)s
 tests =
