--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,14 +1,13 @@
-git+https://github.com/AleksandarPetrov/napoleon.git@0dc3f28a309ad602be5f44a9049785a1026451b3#egg=sphinxcontrib-napoleon
-git+https://github.com/rwblair/sphinxcontrib-versioning.git@39b40b0b84bf872fc398feff05344051bbce0f63#egg=sphinxcontrib-versioning
-nbsphinx
+furo ~= 2021.10.09
+nibabel >=3.0.1
+nipype >=1.3.1,<2.0
 niflow-nipype1-workflows ~= 0.0.1
-nipype>=1.3.1
-git+https://github.com/nipreps/niworkflows.git@master
-packaging
-pydot>=1.2.3
+traits < 6.4
+niworkflows >= 1.2.0,<1.4
+numpy
+pydot >= 1.2.3
 pydotplus
-sphinx-argparse
-sphinx>=2.1.2,<3
-sphinx_rtd_theme
-sphinxcontrib-apidoc ~= 0.3.0
+sphinx ~= 4.2
+sphinxcontrib-apidoc
+sphinxcontrib-napoleon
 templateflow
