--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,13 @@ jobs:
             datalad install -r https://gin.g-node.org/nipreps-data/brain-extraction-tests
             datalad update --merge -d brain-extraction-tests/
             datalad get -r -J 2 -d brain-extraction-tests
+      
+      - run:
+          name: Install HCPh fieldmaps
+          command: |
+            datalad install -r https://github.com/nipreps-data/hcph-pilot_fieldmaps.git
+            datalad update -r --merge -d hcph-pilot_fieldmaps/
+            datalad get -r -J 2 -d hcph-pilot_fieldmaps/ hcph-pilot_fieldmaps/*
 
       - save_cache:
           key: data-v6-{{ .Branch }}-{{ .Revision }}
