ENH: Add data loader to sdcflows.data

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ setup_requires =
     toml
 install_requires =
     attrs >= 20.1.0
+    importlib_resources >= 5.7; python_version < '3.11'
     nibabel >=3.1.0
     nipype >=1.8.5,<2.0
     traits <6.4
