--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -9,7 +9,7 @@ numpy
 packaging
 pydot >= 1.2.3
 pydotplus
-sphinx ~= 4.2
+sphinx >= 7.2.2
 sphinxcontrib-apidoc
 sphinxcontrib-napoleon
 templateflow
