--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -369,8 +369,8 @@ jobs:
       - run:
           name: Install Graphviz
           command: |
-            apt-get update -y
-            apt-get install -y --no-install-recommends graphviz
+            sudo apt-get update -y
+            sudo apt-get install -y --no-install-recommends graphviz
       - run:
           name: Install deps
           command: |
