--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         deps: ["requirements"]
         include:
           - python-version: "3.8"
