CI: Do not try to install datalad through conda

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -108,8 +108,8 @@ jobs:
           python-${{ matrix.python-version }}-${{ env.CACHE_NUM }}
     - name: Install DataLad
       run: |
-        conda install git-annex datalad pip
-        pip install datalad-osf
+        conda install git-annex=*=alldep* pip
+        pip install datalad datalad-osf
     - name: Install fsl
       run: |
         conda install fsl-fugue fsl-topup
