--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,15 @@
 author = The SDCflows developers
 author_email = nipreps@gmail.com
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Recognition
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
 license = Apache-2.0
 long_description = file:README.rst
