--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,10 +229,10 @@ jobs:
           command: |
             export PY3=$( pyenv versions | awk '/^\* 3/ { print $2 }' )
             pyenv local $PY3
-            python3 -m pip install --upgrade setuptools setuptools_scm pip
+            python3 -m pip install -U build hatch hatchling pip twine docutils
 
             # Get version, update files.
-            THISVERSION=$( python3 -m setuptools_scm )
+            THISVERSION=$( python3 -m hatch version | tail -n1 | xargs )
             if [[ ${THISVERSION:0:1} == "0" ]] ; then
               echo "WARNING: latest git tag could not be found"
               echo "Please, make sure you fetch all tags from upstream with"
@@ -255,7 +255,7 @@ jobs:
             export PY3=$( pyenv versions | awk '/^\* 3/ { print $2 }' )
             pyenv local $PY3
             # Get version, update files.
-            THISVERSION=$( python3 -m setuptools_scm )
+            THISVERSION=$( python3 -m hatch version | tail -n1 | xargs )
             BUILT_VERSION=$( docker run --rm --entrypoint=python nipreps/sdcflows:latest -c "import sdcflows; print(sdcflows.__version__)" )
             BUILT_VERSION=${BUILT_VERSION%$'\r'}
             echo "VERSION: \"$THISVERSION\""
@@ -376,13 +376,13 @@ jobs:
           command: |
             python -m venv /tmp/venv
             source /tmp/venv/bin/activate
-            python -m pip install -U pip setuptools setuptools_scm
-            pip install --no-cache-dir -r docs/requirements.txt
+            python -m pip install -U build hatch hatchling pip twine docutils
+            python -m pip install --no-cache-dir -r docs/requirements.txt
       - run:
           name: Build only this commit
           command: |
             source /tmp/venv/bin/activate
-            python -m setuptools_scm
+            python -m hatch version | tail -n1 | xargs
             BRANCH=$( echo $CIRCLE_BRANCH | sed 's+/+_+g' )
             make -C docs SPHINXOPTS="-W" BUILDDIR="$HOME/docs" OUTDIR=${CIRCLE_TAG:-$BRANCH} html
       - store_artifacts:
@@ -422,7 +422,7 @@ jobs:
           command: |
             python -m venv /tmp/buildenv
             source /tmp/buildenv/bin/activate
-            python -m pip install -U build twine setuptools_scm
+            python3 -m pip install -U build hatch hatchling pip twine docutils
             python3 -m build
             twine check dist/sdcflows*
       - store_artifacts:
@@ -435,7 +435,7 @@ jobs:
           name: Validate version
           command: |
             source /tmp/buildenv/bin/activate
-            THISVERSION=$( python -m setuptools_scm )
+            THISVERSION=$( python -m hatch version | tail -n1 | xargs )
             python -m pip install dist/*.whl
             mkdir empty
             cd empty
