--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -45,8 +45,8 @@ jobs:
           if [[ "$GITHUB_REF" == refs/tags/* ]]; then
             VERSION=${GITHUB_REF##*/}
           else
-            pip install setuptools_scm
-            VERSION=$( python -m setuptools_scm )
+            pip install -U build hatch hatchling pip twine docutils
+            VERSION=$( python -m hatch version | tail -n1 | xargs )
           fi
           echo version=$VERSION | tee -a $GITHUB_OUTPUT
 
@@ -78,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.12"]
+        python-version: ["3.10", "3.12"]
         install: [repo, sdist, wheel, editable]
 
     env:
