--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -35,10 +35,10 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12"]
         deps: ["requirements"]
         include:
-          - python-version: "3.8"
+          - python-version: "3.10"
             deps: "min-requirements"
 
     steps:
