--- a/.github/workflows/docs-build-update.yml
+++ b/.github/workflows/docs-build-update.yml
@@ -44,6 +44,11 @@ jobs:
         sudo apt-get update -y
         sudo apt-get install -y --no-install-recommends graphviz
 
+    - name: Set up Python 3
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3
+
     - name: Install dependencies
       run: |
         python -m pip install -U build hatch hatchling pip docutils
