--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,10 +367,10 @@ jobs:
           name: Create subjects folder
           command: mkdir -p $SUBJECTS_DIR
       - run:
-          name: Install Graphviz
+          name: Install Graphviz & pandoc
           command: |
             sudo apt-get update -y
-            sudo apt-get install -y --no-install-recommends graphviz
+            sudo apt-get install -y --no-install-recommends graphviz pandoc
       - run:
           name: Install deps
           command: |
