--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,13 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Image Recognition",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
     "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 license = "Apache-2.0"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 dependencies = [
     "attrs >= 20.1.0",
     "nibabel >=3.1.0",
