--- a/.github/workflows/docs-build-pr.yml
+++ b/.github/workflows/docs-build-pr.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: 3
 
     - name: Install GraphViz & pandoc
       run: |
