--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -370,7 +370,7 @@ jobs:
           name: Install Graphviz & pandoc
           command: |
             sudo apt-get update -y
-            sudo apt-get install -y --no-install-recommends graphviz pandoc
+            sudo apt-get install -y --no-install-recommends graphviz pandoc texlive
       - run:
           name: Install deps
           command: |
