build(deps): bump codecov/codecov-action from 3 to 4
Squashed commit of the following:

commit 3e5b46f117c7a9ef34d067907389001cd7884043
Author: Chris Markiewicz <markiewicz@stanford.edu>
Date:   Tue Feb 6 13:34:49 2024 -0500

    CI: Pass token to codecov action

commit c04ca0996d90562020466b2bf53356e97976c19c
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Mon Feb 5 19:15:58 2024 +0000

    build(deps): bump codecov/codecov-action from 3 to 4

    Bumps [codecov/codecov-action](https://github.com/codecov/codecov-action) from 3 to 4.
    - [Release notes](https://github.com/codecov/codecov-action/releases)
    - [Changelog](https://github.com/codecov/codecov-action/blob/main/CHANGELOG.md)
    - [Commits](https://github.com/codecov/codecov-action/compare/v3...v4)

    ---
    updated-dependencies:
    - dependency-name: codecov/codecov-action
      dependency-type: direct:production
      update-type: version-update:semver-major
    ...

    Signed-off-by: dependabot[bot] <support@github.com>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -177,7 +177,8 @@ jobs:
         export PATH=$ANTSPATH:${AFNI_HOME}:/usr/lib/fsl/5.0:$PATH
         pytest -v --cov sdcflows --cov-report xml:cov.xml --doctest-modules sdcflows
 
-    - uses: codecov/codecov-action@v3
+    - uses: codecov/codecov-action@v4
       with:
         file: cov.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
       if: ${{ always() }}
