--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "numpy >= 1.21.0",
     "pybids >= 0.16.4",
     "scikit-image >= 0.18",
-    "scipy >= 1.8.1",
+    "scipy >= 1.8.1,<=1.12.0",
     "templateflow",
     "toml",
 ]
