--- a/env.yml
+++ b/env.yml
@@ -23,3 +23,5 @@ dependencies:
   # Workflow dependencies: FSL (versions pinned in 6.0.6.2)
   - fsl-fugue=2201.2
   - fsl-topup=2203.1
+  # Workflow dependencies: Julia
+  - julia=1.9.4
