Add fsl-beet2 to env.yml for docker

--- a/env.yml
+++ b/env.yml
@@ -23,3 +23,4 @@ dependencies:
   # Workflow dependencies: FSL (versions pinned in 6.0.6.2)
   - fsl-fugue=2201.2
   - fsl-topup=2203.1
+  - fsl-bet2=2111.8
